style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap');

:root {
    --primary-color-cyan: hsl(158, 36%, 37%);
    --primar-color-cream: hsl(30, 38%, 92%);
    --neutral-color-blue1: hsl(212, 21%, 14%);
    --neutral-color-blue2: hsl(228, 12%, 48%);
    --neutral-color-white: hsl(0, 0%, 100%);
    --font-size-title: 48px;
    --font-size-text: 14px;
}

html,
body {
    margin: 0;
    padding: 0;
    background-color: var(--primar-color-cream);
}

.container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.card {
    display: flex;
    width: min(100% - 3rem, 700px);
    border-radius: 0.75rem;
    overflow: hidden;
}

.card--white {
    background-color: var(--neutral-color-white);
}

.preview {
    flex-basis: 50%;
}

.preview__image {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.description {
    flex-basis: 50%;
    width: 100%;
    padding-block: 2rem;
    overflow: visible;
}

.description__header {
    padding-inline: 2rem;
}

.description__categories {
    font-family: 'Montserrat';
    font-size: var(--font-size-text);
    letter-spacing: 0.5em;
}

.description__categories--blue2 {
    color: var(--neutral-color-blue2);
}

.description__title {
    font-family: 'Fraunces';
    font-size: var(--font-size-title);
    line-height: 1;
}

.description__title--blue1 {
    color: var(--neutral-color-blue1);
}

.description__main {
    padding-inline: 2rem;
}

.description__paragraph {
    font-family: 'Montserrat';
    font-size: var(--font-size-text);
    line-height: 2;
}

.description__paragraph--blue2 {
    color: var(--neutral-color-blue2)
}

.description__price {
    display: flex;
    align-items: center;
    gap: clamp(1rem, 4vw, 2rem);
}

.description__current-price {
    font-family: 'Fraunces';
    font-size: var(--font-size-title);
    line-height: 1;
}

.description__current-price--cyan {
    color: var(--primary-color-cyan)
}

.description__old-price {
    font-family: 'Montserrat';
    font-size: var(--font-size-text);
    text-decoration: line-through;
}

.description__old-price--blue2 {
    color: var(--neutral-color-blue2);
}

.description__button {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 0.5rem;
    width: 100%;
    margin-block: 1.5rem;
    padding-block: 1rem;
    border: none;
    border-radius: 0.5rem;
    cursor: pointer;
}

.description__button--cyan:hover {
    background-image: linear-gradient(rgba(0, 0, 0, 0.4) 0 0);
}

.description__button--cyan {
    background-color: var(--primary-color-cyan);
}

.description__button-icon {
    height: 16px;
    color: var(--neutral-color-white);
}

.description__button-text {
    font-size: var(--font-size-text);
    font-weight: 700;
    color: var(--neutral-color-white);
}

@media (max-width: 510px) {
    .container {
        height: fit-content;
        margin-block: 2rem;
    }

    .card {
        flex-direction: column;
    }

    .preview {
        flex-basis: content;
    }

    .preview__image {
        height: 258px;
    }

    .description {
        flex-basis: content;
    }
}

